Робота над реадером